Time: 30 ms (76.45%), Space: 51.4 MB (68.19%) - LeetHub